# Mediatheque

mylib/: CMakeLists.txt
mylib/include/: Book.h  Client.h  Console.h  Film.h  Game.h  LibrarySystem.h  Media.h  MediaFactory.h  RunningConsole.h
mylib/src/: Book.cpp  Client.cpp  Console.cpp  Film.cpp  Game.cpp  LibrarySystem.cpp  Media.cpp  MediaFactory.cpp  RunningConsole.cpp
sample/src/: main.cpp
